homeworks/big_hw1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-server
  namespace: muffin
spec:
  replicas: 1
  selector: { matchLabels: { app: muffin-server } }
  template:
    metadata: { labels: { app: muffin-server } }
    spec:
      containers:
        - name: server
          image: nikitaptl/muffin-wallet:0.1.2
          ports: [{ containerPort: 8080 }]
          startupProbe:
            tcpSocket: { port: 8080 }
            failureThreshold: 60
            periodSeconds: 2
          readinessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 30
            periodSeconds: 10
