homeworks/big_hw1/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: muffin-pod-standalone
  namespace: muffin
  labels:
    app: muffin-pod-standalone
spec:
  containers:
    - name: server
      image: nikitaptl/muffin-wallet:0.1.1
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
      startupProbe:
        tcpSocket: { port: 8080 }
        failureThreshold: 60
        periodSeconds: 2
      readinessProbe:
        tcpSocket: { port: 8080 }
        initialDelaySeconds: 5
        periodSeconds: 5
      livenessProbe:
        tcpSocket: { port: 8080 }
        initialDelaySeconds: 30
        periodSeconds: 10
