homeworks/big_hw1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muffin-svc
  namespace: muffin
spec:
  selector: { app: muffin-server }
  ports:
    - name: http
      port: 80
      targetPort: 8080
